--- a/javascripts/discourse/components/custom-homepage-content.hbs
+++ b/javascripts/discourse/components/custom-homepage-content.hbs
@@ -1,3 +1,17 @@
 {{#if this.isHomepage}}
-  
+  <section class="home-hero text-white">
+        <div class="relative container px-0 lg:px-7">
+            <div class="swiper-container overflow-hidden">
+                <div class="swiper-wrapper">
+                                            <div class="relative swiper-slide">
+                            <div class="home-hero__item">
+                                                                    <h1 class="w-full text-center heading heading--pink heading--stroke home-hero__text">Rediscover 90s Toys</h1>
+                                                            </div>
+                        </div>
+                                    </div>
+
+                
+                            </div>
+        </div>
+    </section>
 {{/if}}
