--- a/common/common.scss
+++ b/common/common.scss
@@ -558,4 +558,47 @@ td.category {
 }
 
 
+//header text css//
 
+.heading--pink {
+  --text-shadow-color: rgba(237,74,153,0.5);
+  --text-stroke-color: #4e013d;
+}
+@media (min-width: 1024px) {
+  .heading--stroke {
+      -webkit-text-stroke: 4px var(--text-stroke-color);
+  }
+}
+.heading--stroke {
+  -webkit-text-stroke: 2px var(--text-stroke-color);
+}
+.heading {
+  text-shadow: -.07em 0 0 var(--text-shadow-color);
+}
+
+@media (min-width: 1024px) {
+  .home-hero__text {
+      font-size: 5.5rem;
+      line-height: 1;
+  }
+}
+.home-hero__text {
+  margin-top: -30px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-family: Roboto Condensed, sans-serif;
+  font-size: 4.5rem;
+  font-weight: 700;
+  line-height: 1;
+}
+@media (max-width: 767px) {
+  .home-hero__text {
+      font-size: 3rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer .footer__logo {
+margin-left: 7.8em;
+}
+}
