--- a/common/common.scss
+++ b/common/common.scss
@@ -1,49 +1,6 @@
-
-
-.btn-social {
-    width: 115%;
-}
-
-tr[data-category-id="14"]::before {
-    content: "TOY CHAT";
-    font-size: 0.8706em;
-    display: block; /* Optional: Ensures it appears on its own line */
-    margin-bottom: 5px; /* Optional: Adds space between the text and the link */
-    color: white; /* Optional: Adds color to the text */
-}
-
-tr[data-category-id="10"]::before {
-    content: "GAMES";
-    font-size: 0.8706em;
-    display: block; /* Optional: Ensures it appears on its own line */
-    margin-bottom: 5px; /* Optional: Adds space between the text and the link */
-    margin-top: 5px;
-    color: white; /* Optional: Adds color to the text */
-}
-
-tr[data-category-id="2"]::before {
-    content: "SUPPORT";
-    font-size: 0.8706em;
-    display: block; /* Optional: Ensures it appears on its own line */
-    margin-bottom: 5px; /* Optional: Adds space between the text and the link */
-    color: white; /* Optional: Adds color to the text */
-}
-
-#categories-only-category {
-  visibility: hidden;
-  position: relative;
-  
-  &::after {
-    content: "Community";
-    text-transform: uppercase;
-    font-size: 0.8706em;
-    color: white;
-    visibility: visible;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-}
+//Comman css 90stoys community//
+//pinder.chaudhary@gmail.com//
+//17-07-2024//
 
 
 .d-header .login-button,
@@ -72,24 +29,6 @@ tr[data-category-id="2"]::before {
     background-color: rgb(99 52 146 / var(--tw-bg-opacity));
 }
 
-
-/* Full-width banner */
-#banner {
-    background-image: url("https://www.90stoys.com/app/uploads/2023/04/90s-toys-desktop-720x314.avif");
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 314px; /* Adjust the height as needed */
-    margin: 0;
-    padding: 0;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    #banner {
-        height: auto; /* Adjust height for mobile if necessary */
-    }
-}
 
 td.category {
     display: flex;
