--- a/javascripts/discourse/components/custom-homepage-content.hbs
+++ b/javascripts/discourse/components/custom-homepage-content.hbs
@@ -1,4 +1,11 @@
 {{#if this.isHomepage}}
+<div class="hero-container"></div>
+<div class="hero">
+  <div>
+    <h1></h1>
+  </div>
+</div>
+
   <section class="home-hero text-white">
         <div class="relative container px-0 lg:px-7">
             <div class="swiper-container overflow-hidden">
