--- a/javascripts/discourse/components/custom-homepage2-content.hbs
+++ b/javascripts/discourse/components/custom-homepage2-content.hbs
@@ -1,3 +1,9 @@
 {{#if this.isHomepage}}
-  
+  <div class="hero-container"></div>
+<div class="hero">
+  <div>
+    <h1></h1>
+  </div>
+</div>
+
 {{/if}}
