--- a/javascripts/discourse/components/custom-homepage2-content.hbs
+++ b/javascripts/discourse/components/custom-homepage2-content.hbs
@@ -1,9 +1,9 @@
 {{#if this.isHomepage}}
-  <div class="hero-container"></div>
-<div class="hero">
-  <div>
-    <h1></h1>
+<div class="hero-container" style="background: #3164fa; position: relative; height: 230px; overflow: hidden;">
+  <div class="hero" style="background: url('https://community.90stoys.com/uploads/default/original/1X/37bbaba98f7df1ce071eec384deb41671baaa688.avif'); background-position: 50% 50%; background-size: cover; background-repeat: no-repeat; display: flex; align-items: center; justify-content: center; width: 100%; height: 100%; position: absolute; top: 0; left: 0;">
+    <div>
+      <h1>Your Banner Text Here</h1>
+    </div>
   </div>
 </div>
-
 {{/if}}
