--- a/common/common.scss
+++ b/common/common.scss
@@ -3,6 +3,24 @@
 //17-07-2024//
 
 
+.custom-header-links .headerLink a {
+  display: block;
+  padding: 6px 10px;
+  color: #222222;
+  font-size: 16px;
+  border: 1px solid black;
+  border-radius: 12px;
+  margin-right: 5px;
+  background-color: white;
+  height: 33px;
+  width: 80px;
+  text-align: center;
+}
+
+.custom-header-links {
+  margin-top: 5px;
+}
+
 .d-header .login-button,
 .d-header .sign-up-button {
     border-radius: 12px;
