--- a/common/common.scss
+++ b/common/common.scss
@@ -4,20 +4,21 @@
 
 
 .custom-header-links .headerLink a {
-  display: block !important;
-  padding: 6px 10px !important;
-  color: #222222 !important;
-  font-size: 16px !important;
-  border: 1px solid black !important;
-  border-radius: 12px !important;
-  margin-right: 5px !important;
-  background-color: white !important;
-  height: 33px !important;
-  width: 80px !important;
+  display: block;
+  padding: 6px 10px;
+  color: #222222;
+  font-size: 16px;
+  border: 1px solid black;
+  border-radius: 12px;
+  margin-right: 5px;
+  background-color: white;
+  height: 33px;
+  width: 80px;
+  text-align: center;
 }
 
 .custom-header-links {
-  margin-top: 5px !important;
+  margin-top: 5px;
 }
 
 .d-header .login-button,
