--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -2,6 +2,25 @@
 //pinder.chaudhary@gmail.com//
 //17-07-2024//
 
+
+.custom-header-links .headerLink a {
+    display: block;
+    padding: 4px 10px;
+    color: #222222;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 12px;
+    margin-right: 5px;
+    background-color: white;
+    height: 33px;
+    width: 80px;
+    text-align: center;
+  }
+  
+  .custom-header-links {
+    margin-top: 5px;
+  }
+  
 .btn-social {
     width: 115%;
 }
