--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -3,6 +3,10 @@
 //17-07-2024//
 
 
+#site-logo {
+    height: 4.5em !important;
+}
+
 .custom-header-links .headerLink a {
     display: block;
     padding: 4px 10px;
