--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -5,14 +5,14 @@
     border-radius: 12px;
     margin-right: 0px;
     background-color: white;
-    height: 36px;
-    width: 78px;
+    height: 36px !important;
+    width: 78px !important;
     text-align: center;
     border: none;
   }
 
   .custom-header-links {
-    margin-top: 2px;
+    margin-top: 3px;
   }
 
   #site-logo {
