--- a/javascripts/discourse/components/custom-homepage-content.hbs
+++ b/javascripts/discourse/components/custom-homepage-content.hbs
@@ -5,7 +5,7 @@
                 <div class="swiper-wrapper">
                                             <div class="relative swiper-slide">
                             <div class="home-hero__item">
-                                                                    <h1 class="w-full text-center heading heading--pink heading--stroke home-hero__text">Rediscover 90s Toys</h1>
+                                                                    <h1 class="w-full text-center heading heading--pink heading--stroke home-hero__text">Rediscover 90s Toys Community</h1>
                                                             </div>
                         </div>
                                     </div>
