--- a/javascripts/discourse/components/custom-homepage2-content.hbs
+++ b/javascripts/discourse/components/custom-homepage2-content.hbs
@@ -1,4 +1,5 @@
 {{#if this.isHomepage}}
+<div class="navigation-bar">
 <ul id="navigation-bar" class="nav nav-pills ember-view snipcss-oE2Ow">
     <li title="all topics grouped by category" id="ember20" class="active categories ember-view nav-item_categories"><a href="/en/overwatch/categories" class="active" aria-current="true"> Categories </a></li>
     <li title="the most active topics in the last year, month, week or day" id="ember21" class="top ember-view nav-item_top"><a href="/en/overwatch/top" class=""> Top </a></li>
@@ -6,4 +7,5 @@
     <li title="Blizz Tracker" id="ember23" class="group-blizzard-tracker group-blizzard-tracker ember-view nav-item_group-blizzard-tracker"><a href="/en/overwatch/g/blizzard-tracker/activity/posts" class=""> Blizz Tracker </a></li>
     <li title="Dev Tracker" id="ember24" class="group-overwatch-developer group-overwatch-developer ember-view nav-item_group-overwatch-developer"><a href="/en/overwatch/g/overwatch-developer/activity/posts" class=""> Dev Tracker </a></li>
 </ul>
+</div>
 {{/if}}
