--- a/javascripts/discourse/components/custom-homepage2-content.hbs
+++ b/javascripts/discourse/components/custom-homepage2-content.hbs
@@ -1,17 +1,13 @@
 {{#if this.isHomepage}}
-  <section class="home-hero text-white">
-        <div class="relative container px-0 lg:px-7">
-            <div class="swiper-container overflow-hidden">
-                <div class="swiper-wrapper">
-                                            <div class="relative swiper-slide">
-                            <div class="home-hero__item">
-                                                                    <h1 class="w-full text-center heading heading--pink heading--stroke home-hero__text">Rediscover 90s Toys Community</h1>
-                                                            </div>
-                        </div>
-                                    </div>
-
-                
-                            </div>
-        </div>
+  <section class="home-nav">
+    <div class="home-nav1">
+        <ul id="navigation-bar" class="nav nav-pills ember-view snipcss-oE2Ow">
+    <li title="all topics grouped by category" id="ember20" class="active categories ember-view nav-item_categories"><a href="/en/overwatch/categories" class="active" aria-current="true"> Categories </a></li>
+    <li title="the most active topics in the last year, month, week or day" id="ember21" class="top ember-view nav-item_top"><a href="/en/overwatch/top" class=""> Top </a></li>
+    <li title="topics with recent posts" id="ember22" class="latest ember-view nav-item_latest"><a href="/en/overwatch/latest" class=""> Latest </a></li>
+    <li title="Blizz Tracker" id="ember23" class="group-blizzard-tracker group-blizzard-tracker ember-view nav-item_group-blizzard-tracker"><a href="/en/overwatch/g/blizzard-tracker/activity/posts" class=""> Blizz Tracker </a></li>
+    <li title="Dev Tracker" id="ember24" class="group-overwatch-developer group-overwatch-developer ember-view nav-item_group-overwatch-developer"><a href="/en/overwatch/g/overwatch-developer/activity/posts" class=""> Dev Tracker </a></li>
+</ul>
+</div>
     </section>
 {{/if}}
