--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -9,7 +9,7 @@
 
 .custom-header-links .headerLink a {
     display: block;
-    padding: 4px 10px;
+    padding: 8px 10px;
     color: #222222;
     font-size: 16px;
     border-radius: 12px;
@@ -164,4 +164,76 @@ tr[data-category-id="3"] .category-name{
 }
  .category-name {
     margin-left: 94px !important;
+}
+
+
+//custom codes//
+.navigation-controls {
+    justify-content: flex-end;
+}
+
+#main {
+    background: url('https://d3kjluh73b9h9o.cloudfront.net/original/4X/4/f/6/4f6776e5f14c5330de6f1ae2a90de4830907c246.png') !important;
+    background-repeat: no-repeat !important;
+    background-position : bottom;
+    background-size: contain;
+    line-height: 1.15;
+    font-size: 16px;
+    direction: ltr;
+    letter-spacing: .02em;
+    color: var(--primary);
+    top: 1em;
+}
+
+
+.navigation-container {
+    flex-direction: column !important;
+    display: flex;
+}
+
+.nav-pills>li a.active, .nav-pills>li button.active {
+    color: #ffffff !important;
+    background: #fe7a15 !important;
+}
+
+#navigation-bar.nav-pills, .admin-main-nav .nav-pills {
+    width: 68em;
+    border-bottom: solid 1px rgba(255, 255, 255, .15);
+}
+
+.nav-pills>li a.active, .nav-pills>li button.active {
+    font-size: 21px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.nav-pills>li>a, .nav-pills>li button {
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 21px;
+}
+
+.select-kit .select-kit-header .selected-name .name {
+font-family: "Object Sans", Helvetica, Arial, sans-serif;
+    font-size: 1.875em;
+    font-weight: 400;
+    line-height: 1.4;
+    padding: 0;
+    margin: 0;
+    margin-left: -0.05em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: #fff;
+    line-height: 1.7;
+    padding-left: .1em;
+    padding-right: .1em;
+}
+
+.select-kit.combo-box .select-kit-header {
+    border-color: transparent !important;
+}
+
+.list-controls .combo-box .combo-box-header {
+    border: none !important;
 }
