--- a/common/common.scss
+++ b/common/common.scss
@@ -4,6 +4,10 @@
 
 
 
+.d-header {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 52 146 / var(--tw-bg-opacity));
+}
 
 
 @media (min-width: 780px) {
