--- a/common/common.scss
+++ b/common/common.scss
@@ -18,7 +18,7 @@
 }
 .hero {
     background: #3164fa;
-    background-image: url(https://community.90stoys.com/uploads/default/original/1X/37bbaba98f7df1ce071eec384deb41671baaa688.avif);
+    background-image: url('/assets/jp.avif');
     background-position: 50% -4%;
     background-size: cover;
     background-repeat: no-repeat;
