--- a/common/common.scss
+++ b/common/common.scss
@@ -18,7 +18,7 @@
 }
 .hero {
     background: #3164fa;
-    background-image: url('/assets/jp.avif');
+    background-image: url('https://community.90stoys.com/uploads/default/original/1X/7c2c87222289fccd00965155de1a190cc6b20429.png');
     background-position: 50% -4%;
     background-size: cover;
     background-repeat: no-repeat;
