--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -3,6 +3,26 @@
 //17-07-2024//
 
 
+.hero {
+  background: #3164fa;
+  background-image: url('https://community.90stoys.com/uploads/default/original/1X/7c2c87222289fccd00965155de1a190cc6b20429.png');
+  background-position: 50% -4%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  right: 0;
+  top: 60px;
+  height: 406px;
+  overflow: hidden;
+}
+
+.hero-container {
+  min-height: 406px;
+}
 
 .d-header .login-button,
 .d-header .sign-up-button {
